--- a/index.html
+++ b/index.html
@@ -1,135 +1,131 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aplikasi Absensi Siswa</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #74ABE2, #5563DE);
-      color: #fff;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #2a5298, #1e3c72);
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
+      margin: 0;
     }
-
     .container {
       background: rgba(255, 255, 255, 0.1);
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      padding: 25px 35px;
+      border-radius: 15px;
+      box-shadow: 0 4px 25px rgba(0, 0, 0, 0.3);
       width: 90%;
       max-width: 400px;
+      text-align: center;
+      backdrop-filter: blur(6px);
     }
-
+    h2 {
+      margin-bottom: 20px;
+    }
     input, select, button {
       width: 100%;
       padding: 10px;
-      margin: 8px 0;
+      margin: 10px 0;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
+      font-size: 15px;
     }
-
     input, select {
-      background: #fff;
+      background: #ffffff;
       color: #000;
     }
-
     button {
-      background: #00C853;
-      color: #fff;
+      background-color: #00c853;
+      color: white;
       font-weight: bold;
       cursor: pointer;
       transition: 0.3s;
     }
-
     button:hover {
-      background: #009624;
+      background-color: #009624;
     }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    #realtime {
+    #time {
       font-size: 14px;
-      margin-bottom: 15px;
-      color: #ffeb3b;
+      margin-top: 10px;
+      opacity: 0.8;
+    }
+    #page2 {
+      display: none;
     }
   </style>
 </head>
 <body>
-
-  <!-- Halaman Login -->
   <div class="container" id="loginPage">
     <h2>Login Absensi</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
+    <input type="text" id="username" placeholder="Username" required />
+    <input type="password" id="password" placeholder="Password" required />
     <button onclick="login()">Konfirmasi</button>
+    <p id="loginError" style="color: #ff6b6b; font-size: 14px;"></p>
   </div>
 
-  <!-- Halaman Form Absensi -->
-  <div class="container" id="absensiPage" style="display:none;">
+  <div class="container" id="page2">
     <h2>Form Absensi</h2>
-    <div id="realtime">Waktu sekarang: --:--:--</div>
-
     <form id="absensiForm">
-      <input type="text" name="NAMA SISWA" placeholder="Nama Siswa" required>
-      <input type="text" name="KELAS" placeholder="Kelas" required>
-      <input type="date" name="TANGGAL" required>
-
+      <input type="text" name="NAMA_SISWA" placeholder="Nama Siswa" required />
+      <input type="text" name="KELAS" placeholder="Kelas" required />
+      <input type="date" name="TANGGAL" required />
+      <label for="KETERANGAN">Keterangan:</label>
       <select name="KETERANGAN" required>
-        <option value="" disabled selected>Pilih Keterangan</option>
+        <option value="">-- Pilih Keterangan --</option>
         <option value="Hadir">Hadir</option>
         <option value="Sakit">Sakit</option>
         <option value="Izin">Izin</option>
       </select>
-
       <button type="submit">Konfirmasi</button>
     </form>
+    <p id="time"></p>
   </div>
 
   <script>
-    // 🔐 Login sederhana
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyTR3FBDevT8ZB9Y6JXkcJGa3IwPrQc50ftMOEYMVcoQrbAhUl3gWGSQqpse-E6Eq8K/exec';
+    const form = document.getElementById('absensiForm');
+    const loginPage = document.getElementById('loginPage');
+    const page2 = document.getElementById('page2');
+    const loginError = document.getElementById('loginError');
+
     function login() {
-      const user = document.getElementById('username').value;
-      const pass = document.getElementById('password').value;
+      const user = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
+
       if (user === "Dayone" && pass === "Dayone123") {
-        document.getElementById('loginPage').style.display = 'none';
-        document.getElementById('absensiPage').style.display = 'block';
+        loginPage.style.display = "none";
+        page2.style.display = "block";
       } else {
-        alert("Username atau Password salah!");
+        loginError.textContent = "Username atau Password salah!";
       }
     }
 
-    // ⏰ Realtime Clock (WIB)
-    function updateClock() {
-      const now = new Date();
-      const options = { timeZone: 'Asia/Jakarta', hour12: false };
-      const timeString = now.toLocaleTimeString('id-ID', options);
-      document.getElementById('realtime').textContent = "Waktu sekarang: " + timeString + " WIB";
-    }
-    setInterval(updateClock, 1000);
-
-    // 🔗 Link ke Google Apps Script
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxPKDw471vbV7bCYhH8Vf3dUATZXNrW7ePLzYLrorsJv51QifJJ48BbNkDKd8f-MIVe/exec';
-    const form = document.getElementById("absensiForm");
-
-    // 🚀 Kirim data ke Google Sheet
+    // Kirim data ke Google Sheets
     form.addEventListener('submit', e => {
       e.preventDefault();
       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => alert("✅ Data absensi berhasil dikirim!"))
-        .catch(error => alert("❌ Gagal mengirim data: " + error.message));
-      form.reset();
+        .then(response => {
+          alert("✅ Data absensi berhasil dikirim!");
+          form.reset();
+        })
+        .catch(error => {
+          alert("❌ Gagal mengirim data. Periksa koneksi atau URL Web App Script.");
+          console.error(error);
+        });
     });
-  </script>
 
+    // Realtime jam
+    setInterval(() => {
+      const now = new Date();
+      document.getElementById('time').textContent = 
+        "Waktu saat ini: " + now.toLocaleTimeString("id-ID");
+    }, 1000);
+  </script>
 </body>
 </html>
